--- a/index.html
+++ b/index.html
@@ -8,39 +8,47 @@
 </head>
 <<body>
 <header>
-<h1>Bruna</h1>
+<h1>About me</h1>
 </header>
 <nav>
 </nav>
 <main>
 <section>
 <h2>Information about me </h2>
-<p>My name is Bruna Aguilera Suarez, I'm 17 years old and my birthday is June 5th 2008 </p>
+<p>My name is Bruna Aguilera Suarez, I'm 17 years old and my Birthday is June 5th 2008 </p>
 </section>
 <section>
 <h2>My favorite things </h2>
-<p>
--My favorite color is Navy Blue
--My favorite animals are the Pandas 
--One of my favorite foods are :Teriyaqui Subway,Punta brava sandwiches,Gnocchi alla sorrentina, pizzas
--My favorite accesory to use are neckaces, rings and bags
-</p>
+<ul>
+  <li>My favorite color is Navy Blue</li>
+  <li>My favorite animals are the Pandas </li>
+  <li>One of my favorite foods are :Teriyaqui Subway,Punta brava sandwiches,Gnocchi Alla Sorrentina, pizzas</li>
+  <li>My favorite accesory to use are neckaces, rings and bags</li>
+  <li> I love to play boardgames like Rummikub,ONE,Monpoly,Mexican train,Telefunque</li>
+  
+</ul>
 </section>
 <section>
-<h2>Sports I did /h2>
+<h2>Sports I did 
 <p>
--Basketball
--Voleyball
--Tennis
--Dance
--Football
--Ballet
--Swimming
+<ul>
+  <li>Basketball</li>
+  <li>Volleyball</li>
+  <li>Tennis</li>
+  <li>Dance</li>
+  <li>Football</li>
+  <li>Ballet</li>
+  <li>Gymnastics</li>
+  
+</ul>
+
+  
+
 </p>
 </section>
 </main>
 <footer>
-<p> I love to play boardgames </p>
+
 </footer>
 </body>
 </html>
