--- a/index.html
+++ b/index.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bruna - Portfolio</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bruna - Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<<body>
-<header>
-<h1>About me</h1>
-</header>
-<nav>
-</nav>
-<main>
-<section>
-<h2>Information about me </h2>
-<p>My name is Bruna Aguilera Suarez, I'm 17 years old and my Birthday is June 5th 2008 </p>
-</section>
-<section>
-<h2>My favorite things </h2>
-<ul>
-  <li>My favorite color is Navy Blue</li>
-  <li>My favorite animals are the Pandas </li>
-  <li>One of my favorite foods are :Teriyaqui Subway,Punta brava sandwiches,Gnocchi Alla Sorrentina, pizzas</li>
-  <li>My favorite accesory to use are neckaces, rings and bags</li>
-  <li> I love to play boardgames like Rummikub,ONE,Monpoly,Mexican train,Telefunque</li>
-  
-</ul>
-</section>
-<section>
-<h2>Sports I did 
-<p>
-<ul>
-  <li>Basketball</li>
-  <li>Volleyball</li>
-  <li>Tennis</li>
-  <li>Dance</li>
-  <li>Football</li>
-  <li>Ballet</li>
-  <li>Gymnastics</li>
-  
-</ul>
+<body>
 
-  
+  <header>
+    <h1>🐼 About Me 🐼</h1>
+  </header>
 
-</p>
-</section>
-</main>
-<footer>
+  <nav>
+    <!-- Add links if needed -->
+    <!-- <a href="#about">About</a> -->
+  </nav>
 
-</footer>
+  <main>
+
+    <section>
+      <h2>✨ Information About Me ✨</h2>
+      <p>My name is <strong>Bruna Aguilera Suarez</strong>, I'm 17 years old and my birthday is <strong>June 5th, 2008</strong>.</p>
+    </section>
+
+    <section>
+      <h2>🌈 My Favorite Things</h2>
+      <ul>
+        <li>My favorite color is <strong>Navy Blue</strong></li>
+        <li>My favorite animals are the <strong>Pandas</strong></li>
+        <li>Some of my favorite foods: Teriyaki Subway, Punta Brava sandwiches, Gnocchi Alla Sorrentina, pizzas</li>
+        <li>Favorite accessories: necklaces, rings, and bags</li>
+        <li>I love playing boardgames like Rummikub, UNO, Monopoly, Mexican Train, Telefunque</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>🏀 Sports I Have Tried</h2>
+      <ul>
+        <li>Basketball</li>
+        <li>Volleyball</li>
+        <li>Tennis</li>
+        <li>Dance</li>
+        <li>Football</li>
+        <li>Ballet</li>
+        <li>Gymnastics</li>
+      </ul>
+    </section>
+
+  </main>
+
+  <footer style="text-align: center; padding: 15px; background-color: #CECEDE; color: white; font-family: 'Pacifico', cursive;">
+    Made with 💖 by Bruna
+  </footer>
+
 </body>
 </html>
+
