--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
   </header>
 
   <nav>
-    <!-- Add links if needed -->
-    <!-- <a href="#about">About</a> -->
+    <!-- Add links here later if needed -->
   </nav>
 
   <main>
+
+    <!-- Featured image -->
+    <div class="featured-image">
+      <img src="https://brunaaguilera.github.io/web/violetta.webp" alt="Violetta" />
+    </div>
 
     <section>
       <h2>✨ Information About Me ✨</h2>
@@ -50,10 +54,9 @@
 
   </main>
 
-  <footer style="text-align: center; padding: 15px; background-color: #CECEDE; color: white; font-family: 'Pacifico', cursive;">
+  <footer>
     Made with 💖 by Bruna
   </footer>
 
 </body>
 </html>
-
