--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>🐼 About Me 🐼</h1>
+    <h1>VIOLETTA</h1>
   </header>
 
   <nav>
@@ -24,31 +24,30 @@
     </div>
 
     <section>
-      <h2>✨ Information About Me ✨</h2>
-      <p>My name is <strong>Bruna Aguilera Suarez</strong>, I'm 17 years old and my birthday is <strong>June 5th, 2008</strong>.</p>
+      <h2>✨ Information about Violetta ✨</h2>
+      <p>Violetta is a Disney Channel telenovela from Latin America about a musically talented but lonely teenager who returns to her native Buenos Aires after living in Europe.
+        While trying to hide her passion from her overprotective father, she discovers her musical talents, finds true friends, and navigates love and the challenges of growing up. .</p>
     </section>
 
     <section>
-      <h2>🌈 My Favorite Things</h2>
+      <h2>🎬 Main Characters and the actors names 🎬 </h2>
       <ul>
-        <li>My favorite color is <strong>Navy Blue</strong></li>
-        <li>My favorite animals are the <strong>Pandas</strong></li>
-        <li>Some of my favorite foods: Teriyaki Subway, Punta Brava sandwiches, Gnocchi Alla Sorrentina, pizzas</li>
-        <li>Favorite accessories: necklaces, rings, and bags</li>
-        <li>I love playing boardgames like Rummikub, UNO, Monopoly, Mexican Train, Telefunque</li>
+        <li><strong>Violetta Castillo</strong>– played by Martina Stoessel</li>
+        <li> <strong>Germán Castillo</strong>– played by Diego Ramos </li>
+        <li> <strong>León Vargas</strong>– played by Jorge Blanco </li>
+        <li> <strong>Ludmila Ferro</strong>– played by Mercedes Lambre </li>
+        <li> <strong>Andrés Calixto</strong>– played by Nicolás Garnier </li>
+        <li> <strong>Natalia “Naty” Vidal</strong>– played by Alba Rico </li>
+        <li> <strong>Francesca “Fran” Caviglia</strong>– played by  Lodovica Comello</li>
       </ul>
     </section>
 
     <section>
-      <h2>🏀 Sports I Have Tried</h2>
+      <h2>Episodes and Seasons </h2>
       <ul>
-        <li>Basketball</li>
-        <li>Volleyball</li>
-        <li>Tennis</li>
-        <li>Dance</li>
-        <li>Football</li>
-        <li>Ballet</li>
-        <li>Gymnastics</li>
+        <li> <strong>Season 1: <strong> 80 episodes (aired in 2012)</li>
+        <li> <strong>Season 2: <strong> 80 episodes (aired in 2013)</li>
+        <li> <strong>Season 3: <strong> 80 episodes (aired in 2014–2015)</li>
       </ul>
     </section>
 
