--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Featured image -->
     <div class="featured-image">
-      <img src="https://brunaaguilera.github.io/web/violetta.webp" alt="Violetta" />
+      <img src="https://brunaaguilera.github.io/web/IMG_0010.jpeg" alt="Violetta" />
     </div>
 
     <section>
